--- a/power/src/app/fragebogen/details/publish/publish.component.html
+++ b/power/src/app/fragebogen/details/publish/publish.component.html
@@ -19,7 +19,7 @@
             <!-- modal body -->
             <div class="modal-body">
                 <!-- formular -->
-                <form #publishForm="ngForm" onsubmit="return false;">
+                <form #publishForm="ngForm" i18n-aria-label aria-label="Einstellungen zur Veröffentlichung des Formulares" onsubmit="return false;">
                     <!-- pin type -->
                     <div class="form-group row m-0">
                         <label class="col-12 col-lg-3 col-form-label px-0" for="pintype" i18n>Zugangsschutz</label>
