Bodenrichtwert: Some optimizations

--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -54,7 +54,7 @@
           <a class="nav-link" (click)="toggleSearchActive()">
             <img src="/assets/icons/search.svg" width="25" height="25" alt="Suche">
           </a>
-          <a class="nav-link">
+          <a class="nav-link"  (click)="enableLocationTracking()">
             <img src="/assets/icons/geo.svg" width="25" height="25" alt="Ortung">
           </a>
           <a class="nav-link" (click)="toggle3dView()">
