--- a/power/src/app/fragebogen/home/home.component.html
+++ b/power/src/app/fragebogen/home/home.component.html
@@ -39,7 +39,7 @@
                 <p class="lead" i18n>Wenn Sie ein Formular einreichen wollen finden Sie hier unsere öffentlichen Formulare.</p>
                 <hr class="my-4">
                 <div class="lead">
-                    Coming Soon.
+                    Coming Soon&trade;
                 </div>
             </div>
         </div>
@@ -56,7 +56,7 @@
                 <p class="lead" i18n>Als Notar erhalten Sie die Möglichkeit über unser Onlineportal einen digitalen Datenaustausch vorzunehmen.</p>
                 <hr class="my-4">
                 <div class="lead">
-                    Coming Soon.
+                    Coming Soon&trade;
                 </div>
             </div>
         </div>
