--- a/power/src/app/fragebogen/editor/editor.component.html
+++ b/power/src/app/fragebogen/editor/editor.component.html
@@ -43,6 +43,25 @@
                 </smooth-dnd-container>
             </ul>
         </div>
+
+        <!-- favorites -->
+        <div class="card bg-light mt-2">
+            <div class="card-header h5 clickable"
+                role="button"
+                tabindex="0"
+                (click)="isCollapsedToolBox = !isCollapsedToolBox"
+                (keyup.enter)="isCollapsedToolBox = !isCollapsedToolBox"
+                [attr.aria-expanded]="isCollapsedToolBox"
+                aria-controls="favorites">
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-star-fill align-baseline" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                    <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.283.95l-3.523 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
+                </svg>
+                <span i18n>&nbsp;Favoriten</span>
+            </div>
+            <div id="favorites" class="card-body" [collapse]="!isCollapsedToolBox" [isAnimated]="true">
+                Coming Soon&trade;
+            </div>
+        </div>
     </div>
 
     <!-- right side -->
