--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -4,7 +4,8 @@
     <p class="lead" i18n>für Bauland und landwirtschaftliche Nutzflächen für das gesamte Land Niedersachsen</p>
     <a class="btn btn-danger" [routerLink]="['/bodenrichtwerte']" i18n>Zur Anwendung</a>
   </div>
-  <div class="bg-dark shadow-sm mx-auto d-lg-inline d-xl-none" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
+  <div class="bg-dark shadow-sm mx-auto d-lg-inline d-xl-none"
+    style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
   <div class="product-device shadow-sm d-none d-lg-block"></div>
   <div class="product-device product-device-2 shadow-sm d-none d-lg-block"></div>
 </div>
