--- a/power/src/app/fragebogen/dashboard/dashboard.component.html
+++ b/power/src/app/fragebogen/dashboard/dashboard.component.html
@@ -1,60 +1,156 @@
 <!-- dashboard page -->
 <main class="mainpage p-1 p-lg-3" id="content" tabindex="-1">
+  <!-- tasks list -->
+  <div class="card bg-light mb-2 mb-lg-3">
+    <div class="card-header h5">
+      <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-list-ul" fill="currentColor"
+        xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+        <path fill-rule="evenodd"
+          d="M5 11.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm-3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm0 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm0 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2z" />
+      </svg>
+      <span i18n>&nbsp;Antworten</span>
+    </div>
+    <div class="card-body table-responsive p-0">
+      <table class="table table-hover m-0">
+        <thead>
+          <tr>
+            <th scope="col" class="border-top-0" i18n>ID</th>
+            <th scope="col" class="border-top-0" *ngIf="storage.form.access !== 'public'" i18n>PIN</th>
+            <th scope="col" class="border-top-0" i18n>Status</th>
+            <th scope="col" class="border-top-0" i18n>Kommentar</th>
+            <th scope="col" class="border-top-0" i18n>Zuletzt bearbeitet</th>
+            <th scope="col" class="border-top-0" i18n>Erstellt</th>
+            <th scope="col" class="border-top-0 w-75"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let task of storage.tasksList; index as i">
+            <td>{{ task.id }}</td>
+            <td *ngIf="storage.form.access !== 'public'">
+              <a [routerLink]="['/forms/fillout', task.pin]" *ngIf="task.status !== 'submitted'">
+                {{ task.pin }}
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-link-45deg" fill="currentColor"
+                  xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                  <path
+                    d="M4.715 6.542L3.343 7.914a3 3 0 1 0 4.243 4.243l1.828-1.829A3 3 0 0 0 8.586 5.5L8 6.086a1.001 1.001 0 0 0-.154.199 2 2 0 0 1 .861 3.337L6.88 11.45a2 2 0 1 1-2.83-2.83l.793-.792a4.018 4.018 0 0 1-.128-1.287z" />
+                  <path
+                    d="M5.712 6.96l.167-.167a1.99 1.99 0 0 1 .896-.518 1.99 1.99 0 0 1 .518-.896l.167-.167A3.004 3.004 0 0 0 6 5.499c-.22.46-.316.963-.288 1.46z" />
+                  <path
+                    d="M6.586 4.672A3 3 0 0 0 7.414 9.5l.775-.776a2 2 0 0 1-.896-3.346L9.12 3.55a2 2 0 0 1 2.83 2.83l-.793.792c.112.42.155.855.128 1.287l1.372-1.372a3 3 0 0 0-4.243-4.243L6.586 4.672z" />
+                  <path
+                    d="M10 9.5a2.99 2.99 0 0 0 .288-1.46l-.167.167a1.99 1.99 0 0 1-.896.518 1.99 1.99 0 0 1-.518.896l-.167.167A3.004 3.004 0 0 0 10 9.501z" />
+                </svg>
+              </a>
+            </td>
+            <td>{task.status, select, created {Erstellt} accessed {In bearbeitung} submitted
+              {Abgeschlossen}}</td>
+            <td>
+              {{ task.description }}
+              <span class="ml-1 text-primary clickable" i18n-title title="Bearbeiten" role="button" tabindex="0"
+                *ngIf="task.status !== 'submitted'" (click)="comment.open(i)" (keyup.enter)="comment.open(i)">
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-pencil-square" fill="currentColor"
+                  xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                  <path
+                    d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456l-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+                  <path fill-rule="evenodd"
+                    d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
+                </svg>
+                <span class="sr-only" i18n>Bearbeiten</span>
+              </span>
+            </td>
+            <td *ngIf="task.status !== 'submitted'">{{ task.accessed | date:'short' }}</td>
+            <td *ngIf="task.status === 'submitted'">{{ task.submitted | date:'short' }}</td>
+            <td>{{ task.created | date:'short' }}</td>
+            <td>
+              <button type="button" class="btn btn-primary btn-sm mr-2" i18n-title title="Ergebnisse anzeigen"
+                (click)="openTask(i)" *ngIf="task.status === 'submitted'">
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-binoculars-fill align-baseline"
+                  fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                  <path
+                    d="M4.5 1A1.5 1.5 0 0 0 3 2.5V3h4v-.5A1.5 1.5 0 0 0 5.5 1h-1zM7 4v1h2V4h4v.882a.5.5 0 0 0 .276.447l.895.447A1.5 1.5 0 0 1 15 7.118V13H9v-1.5a.5.5 0 0 1 .146-.354l.854-.853V9.5a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v.793l.854.853A.5.5 0 0 1 7 11.5V13H1V7.118a1.5 1.5 0 0 1 .83-1.342l.894-.447A.5.5 0 0 0 3 4.882V4h4zM1 14v.5A1.5 1.5 0 0 0 2.5 16h3A1.5 1.5 0 0 0 7 14.5V14H1zm8 0v.5a1.5 1.5 0 0 0 1.5 1.5h3a1.5 1.5 0 0 0 1.5-1.5V14H9zm4-11H9v-.5A1.5 1.5 0 0 1 10.5 1h1A1.5 1.5 0 0 1 13 2.5V3z" />
+                </svg>
+                <span i18n>&nbsp;Ergebnisse</span>
+              </button>
+              <button type="button" class="btn btn-danger btn-sm" i18n-title title="Antwort löschen"
+                (click)="deleteTask(i)">
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash-fill align-baseline"
+                  fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                  <path fill-rule="evenodd"
+                    d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0v-7z" />
+                </svg>
+                <span i18n>&nbsp;Löschen</span>
+              </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <span class="m-3" *ngIf="!storage.tasksList.length" i18n>Keine Antworten vorhanden</span>
+    </div>
+  </div>
+
   <!-- forms list -->
   <div class="card bg-light">
     <div class="card-header h5">
-      <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-list-ul align-baseline" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-        <path fill-rule="evenodd" d="M5 11.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zm-3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm0 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm0 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
+      <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-file-earmark-medical align-baseline"
+        fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+        <path
+          d="M4 1h5v1H4a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V6h1v7a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2z" />
+        <path d="M9 4.5V1l5 5h-3.5A1.5 1.5 0 0 1 9 4.5z" />
+        <path fill-rule="evenodd"
+          d="M7 4a.5.5 0 0 1 .5.5v.634l.549-.317a.5.5 0 1 1 .5.866L8 6l.549.317a.5.5 0 1 1-.5.866L7.5 6.866V7.5a.5.5 0 0 1-1 0v-.634l-.549.317a.5.5 0 1 1-.5-.866L6 6l-.549-.317a.5.5 0 0 1 .5-.866l.549.317V4.5A.5.5 0 0 1 7 4zM5 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z" />
       </svg>
       <span i18n>&nbsp;Formulare</span>
     </div>
     <div class="card-body table-responsive p-0">
       <table class="table table-hover m-0">
         <thead>
-        <tr>
-          <th scope="col" class="border-top-0" i18n>ID</th>
-          <th scope="col" class="border-top-0 w-50" i18n>Titel</th>
-          <th scope="col" class="border-top-0" i18n>Status</th>
-          <th scope="col" class="border-top-0" i18n>Besitzer</th>
-          <th scope="col" class="border-top-0" i18n>Tags</th>
-          <th scope="col" class="border-top-0" i18n>Erstellt</th>
-          <th scope="col" class="border-top-0"></th>
-        </tr>
+          <tr>
+            <th scope="col" class="border-top-0" i18n>ID</th>
+            <th scope="col" class="border-top-0 w-50" i18n>Titel</th>
+            <th scope="col" class="border-top-0" i18n>Status</th>
+            <th scope="col" class="border-top-0" i18n>Besitzer</th>
+            <th scope="col" class="border-top-0" i18n>Tags</th>
+            <th scope="col" class="border-top-0" i18n>Erstellt</th>
+            <th scope="col" class="border-top-0"></th>
+          </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let form of storage.formsList; index as i">
-          <td>{{ form.id }}</td>
-          <td scope="row">
-            <a i18n-title title="Formular öffnen" [routerLink]="['/forms/details', form.id]">
-              {{ form.title }}
-            </a>
-          </td>
-          <td>{form.status, select, created {Erstellt} published {Veröffentlicht} cancelled {Geschlossen}}</td>
-          <td>{{ form.owners }}</td>
-          <td>{{ form.tags }}</td>
-          <td>{{ form.created | date:'short' }}</td>
-          <td>
-            <button type="button" class="btn btn-danger btn-sm" id="button-delete" i18n-title title="Formular löschen"
-                    (click)="deleteForm(i)">
-              <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash-fill align-baseline" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-                <path fill-rule="evenodd" d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0v-7z"/>
-              </svg>
-              <span i18n>&nbsp;Löschen</span>
-            </button>
-          </td>
-        </tr>
+          <tr *ngFor="let form of storage.formsList; index as i">
+            <td>{{ form.id }}</td>
+            <td scope="row">
+              <a i18n-title title="Formular öffnen" [routerLink]="['/forms/details', form.id]">
+                {{ form.title }}
+              </a>
+            </td>
+            <td>{form.status, select, created {Erstellt} published {Veröffentlicht} cancelled {Geschlossen}}
+            </td>
+            <td>{{ form.owners }}</td>
+            <td>{{ form.tags }}</td>
+            <td>{{ form.created | date:'short' }}</td>
+            <td>
+              <button type="button" class="btn btn-danger btn-sm" id="button-delete" i18n-title title="Formular löschen"
+                (click)="deleteForm(i)">
+                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash-fill align-baseline"
+                  fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                  <path fill-rule="evenodd"
+                    d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0v-7z" />
+                </svg>
+                <span i18n>&nbsp;Löschen</span>
+              </button>
+            </td>
+          </tr>
         </tbody>
       </table>
       <span class="m-3" *ngIf="!storage.formsList.length" i18n>Keine Formulare gefunden</span>
     </div>
     <div class="card-footer">
-      <button type="button"
-              class="btn btn-success btn-sm mr-2"
-              i18n-title title="Neues Formular erstellen"
-              (click)="newform.open()">
-        <svg width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-plus align-top" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-          <path fill-rule="evenodd" d="M8 3.5a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5H4a.5.5 0 0 1 0-1h3.5V4a.5.5 0 0 1 .5-.5z"/>
-          <path fill-rule="evenodd" d="M7.5 8a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1H8.5V12a.5.5 0 0 1-1 0V8z"/>
+      <button type="button" class="btn btn-success btn-sm mr-2" i18n-title title="Neues Formular erstellen"
+        (click)="newform.open()">
+        <svg width="1.5em" height="1.5em" viewBox="0 0 16 16" class="bi bi-plus align-top" fill="currentColor"
+          xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+          <path fill-rule="evenodd"
+            d="M8 3.5a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5H4a.5.5 0 0 1 0-1h3.5V4a.5.5 0 0 1 .5-.5z" />
+          <path fill-rule="evenodd" d="M7.5 8a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1H8.5V12a.5.5 0 0 1-1 0V8z" />
         </svg>
         <span i18n>&nbsp;Neues Formular</span>
       </button>
