--- a/power/src/app/shared/alerts/alerts.component.html
+++ b/power/src/app/shared/alerts/alerts.component.html
@@ -1,20 +1,23 @@
 <!-- alerts container -->
 <div id="alert-root" class="container fixed-bottom">
-    <div *ngFor="let alert of alerts.alertslist; index as i">
-        <alert [type]="alert.type" [dismissOnTimeout]="alert.timeout" (onClosed)="onClosed(i)">
-            <button i18n-aria-label aria-label="Schließen" i18n-title title="Schließen" class="close ng-star-inserted" type="button" (click)="onClosed(i)">
-                <span aria-hidden="true">×</span>
-                <span class="sr-only sr-only-focusable" i18n>Alert schließen</span>
-            </button>
-            <span class="h4 alert-heading">
-                <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-info-circle align-baseline" fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-                    <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                    <path d="M8.93 6.588l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588z"/>
-                    <circle cx="8" cy="4.5" r="1"/>
-                </svg>
-                {{ alert.title }}
-            </span>
-            <p class="m-0">{{ alert.text }}</p>
-        </alert>
-    </div>
+  <div *ngFor="let alert of alerts.alertslist; index as i">
+    <alert [type]="alert.type" [dismissOnTimeout]="alert.timeout" (onClosed)="onClosed(i)">
+      <button i18n-aria-label aria-label="Schließen" i18n-title title="Schließen" class="close ng-star-inserted"
+        type="button" (click)="onClosed(i)">
+        <span aria-hidden="true">×</span>
+        <span class="sr-only sr-only-focusable" i18n>Alert schließen</span>
+      </button>
+      <span class="h4 alert-heading">
+        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-info-circle align-baseline" fill="currentColor"
+          xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+          <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+          <path
+            d="M8.93 6.588l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588z" />
+          <circle cx="8" cy="4.5" r="1" />
+        </svg>
+        {{ alert.title }}
+      </span>
+      <p class="m-0">{{ alert.text }}</p>
+    </alert>
+  </div>
 </div>
