Bodenwerte: Search selection and refactoring

--- a/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
+++ b/power/src/app/bodenwert-kalkulator/bodenwert-kalkulator/bodenwert-kalkulator.component.html
@@ -8,7 +8,7 @@
           </div>
         </div>
         <div class="nav px-auto" style="position: relative;">
-          <power-geosearch></power-geosearch>
+          <power-geosearch (selectResult)="onSearchSelect($event)"></power-geosearch>
         </div>
         <div class="nav">
           <a class="nav-link" (click)="enableLocationTracking()">
