--- a/power/src/app/immobilien/immobilien/immobilien.component.html
+++ b/power/src/app/immobilien/immobilien/immobilien.component.html
@@ -58,9 +58,9 @@
                         <li>
                             <ng-container *ngFor="let itm of select['preset']; let i = index">
                                 <ng-container *ngIf="nipixRuntime.getDrawPreset(itm).show">
-                                    <span class="check" [style.background-color]="getCustomColor(itm)" style="padding-bottom: 0.5rem;">
-                                        <input id="{{i}}vall" [checked]="nipixRuntime.getDrawPreset(itm).values.length == 0" type="checkbox" (click)="toggleAllSelect(itm)">
-                                        <label for="{{i}}vall" style="margin-bottom: 0;">
+                                    <span class="check custom-checkbox" [style.background-color]="getCustomColor(itm)" style="padding-bottom: 0.5rem; padding-top: 0.5rem;">
+                                        <input id="{{i}}vall" [checked]="nipixRuntime.getDrawPreset(itm).values.length == 0" type="checkbox" class="custom-control-input" (click)="toggleAllSelect(itm)">
+                                        <label for="{{i}}vall" style="margin-bottom: 0;" class="custom-control-label">
                                         </label>
                                     </span>
                                     <span *ngIf="select['type'] == 'single' && nipixRuntime.getDrawPreset(itm).values.length == 0">alle auswählen</span>
@@ -76,9 +76,9 @@
                         <li *ngFor="let subitem of nipixStatic.data.allItems">
                             <ng-container *ngFor="let itm of select['preset']; let i = index">
 
-                                <span class="check" [style.background-color]="getCustomColor(itm)" *ngIf="nipixRuntime.getDrawPreset(itm).show">
-                                    <input id="{{i}}v1{{subitem}}" [checked]="nipixRuntime.getDrawPreset(itm).values.includes(subitem)" type="checkbox" (click)="toggleMapSelect(itm, subitem, select['type'])">
-                                    <label for="{{i}}v1{{subitem}}" style="margin-bottom: 0;"></label>
+                                <span class="check custom-checkbox" [style.background-color]="getCustomColor(itm)" *ngIf="nipixRuntime.getDrawPreset(itm).show">
+                                    <input id="{{i}}v1{{subitem}}" [checked]="nipixRuntime.getDrawPreset(itm).values.includes(subitem)" type="checkbox" class="custom-control-input" (click)="toggleMapSelect(itm, subitem, select['type'])">
+                                    <label for="{{i}}v1{{subitem}}" style="margin-bottom: 0;" class="custom-control-label"></label>
                                 </span>
                             </ng-container>
                             <span style="display: inline-block; margin-right: 5px; border-radius: 10px; width: 10px; height: 10px;" [style.background-color]="getSeriesColor(subitem)" *ngIf="select['type'] == 'single'"></span>
@@ -89,8 +89,10 @@
                     <!-- Select DrawShow -->
                     <ul *ngIf="select['type'] == 'multi' || select['type'] == 'multiIndex'">
                         <li *ngFor="let itm of select['preset']">
-                            <input id="{{itm}}" type="checkbox" [checked]="nipixRuntime.getDrawPreset(itm).show" (change)="onToggleDrawRoot(itm)">
-                            <label for="{{itm}}"></label>
+                            <span class="check custom-checkbox">
+                                <input id="{{itm}}" type="checkbox" class="custom-control-input" [checked]="nipixRuntime.getDrawPreset(itm).show" (change)="onToggleDrawRoot(itm)">
+                                <label for="{{itm}}" class="custom-control-label"></label>
+                            </span>
                             <span (click)="onClickDrawRoot(itm)">
                                 <span style="display: inline-block; margin-right: 5px; border-radius: 10px; width: 10px; height: 10px;" [style.background-color]="nipixRuntime.getDrawPreset(itm).colors"></span>
                                 {{ itm }}
